working on project page

--- a/project/src/index.css
+++ b/project/src/index.css
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-    font-family: 'poppins' !important;
+    font-family: 'Lato', sans-serif;
     background-color: #E4E4FE;
 }
 
